[project]
name = "sodar-cli"
description = "Command line interface client for SODAR REST API."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Programming Language :: Python :: 3",
]
dynamic = ["version"]
dependencies = [
    "attrs>=24.3.0",
    "cattrs>=24.1.2",
    "logzero>=1.7.0",
    "python-dateutil>=2.9.0.post0",
    "python-levenshtein>=0.26.1",
    "requests>=2.32.3",
    "simplejson>=3.19.3",
    "tabulate>=0.9.0",
    "toml>=0.10.2",
    "tqdm>=4.67.1",
]

[project.license]
file = "LICENSE"

[tool.setuptools]
packages = ["sodar_cli"]

[tool.setuptools.dynamic]
version = {attr = "sodar_cli.version.__version__"}


[tool.coverage.run]
omit = []
relative_files = true

[tool.coverage.report]
exclude_lines = ["pragma: no cover", "def __repr__", "if __name__ == '__main__':"]

[tool.ruff.lint]
ignore = ["E203", "E266", "E501"]
select = ["B", "C", "E", "F", "W"]

[tool.ruff.lint.mccabe]
# Flag errors (`C901`) whenever the complexity level exceeds 18.
max-complexity = 18

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "ruff>=0.9.0",
]
